crates/toml_edit/tests/fixtures/invalid/datetime/mday-over.stderr
TOML parse error at line 3, column 13
  |
3 | d = 2006-01-32T00:00:00-00:00
  |             ^
Invalid date-time
Value is out of range
